test/errors/array_types_error/zs/packed_array_unpackable_extern_element_error.zs
package packed_array_unpackable_extern_element_error;

struct PackedArrayUnpackableExternElementError
{
    packed uint32 array1[];
    packed extern array2[]; // unpackable
};
